--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -152,6 +152,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v2
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
