--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -152,8 +152,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Download all workflow run artifacts
+      - name: Download Binaries to Docker Build
         uses: actions/download-artifact@v2
+        with:
+          name: NWNX-EE.zip
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
