--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -152,7 +152,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Download Binaries to Docker Build
+      - name: Download Binary Upload URL
         uses: actions/download-artifact@v2
         with:
           name: NWNX-EE.zip
