--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -170,8 +170,15 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: Build and push
         id: docker_build
@@ -180,32 +187,10 @@ jobs:
           context: ./
           file: ./Dockerfile-gha
           push: true
-          tags: plenarius/unified:${{ steps.vars.outputs.sha_short }}
-
-      - name: Log into GitHub Container Registry
-        run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
-
-      - name: Push poi image to GitHub Container Registry
-        run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-
-          # Change all uppercase to lowercase
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
-          # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
-
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
-
-          docker tag plenarius/unified:${{ steps.vars.outputs.sha_short }} $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+          tags: |
+            plenarius/unified:latest
+            plenarius/unified:${{ steps.vars.outputs.sha_short }}
+            ghcr.io/plenarius/nwnxee:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
