--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -199,9 +199,10 @@ jobs:
         uses: sarisia/actions-status-discord@v1
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          title: A new docker image with the latest binaries has been published to the Docker Hub.
+          title: A new docker image with the latest binaries has been published to the Docker Hub and GitHub Container Registry.
           description: |
-            Visit [Docker Hub](https://hub.docker.com/layers/plenarius/unified/${{ steps.vars.outputs.sha_short }}/images/${{ steps.docker_build.outputs.digest }}) for more information.
+            * [Docker Hub](https://hub.docker.com/layers/plenarius/unified/${{ steps.vars.outputs.sha_short }}/images/${{ steps.docker_build.outputs.digest }})
+            * [GHCR](https://github.com/users/plenarius/packages/container/package/nwnxee)
 
 
   release:
