Forgot a forward slash

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -159,13 +159,13 @@ jobs:
         id: vars
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Download Binary Upload URL
+      - name: Download Binaries
         uses: actions/download-artifact@v2
         with:
           name: NWNX-EE.zip
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
