--- a/Dockerfile-gha
+++ b/Dockerfile-gha
@@ -32,7 +32,7 @@ COPY ./Scripts/Docker/run-server.patch /nwn
 RUN patch /nwn/run-server.sh < /nwn/run-server.patch
 
 # Security upgrades and remove unneeded packages
-RUN apt-get -y upgrade
+RUN apt-get -y upgrade \
     && apt-get -y remove --purge wget gpg apt-transport-https unzip patch \
     && apt-get -y autoremove
     && apt-get clean
