--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -153,10 +153,10 @@ jobs:
       uses: sarisia/actions-status-discord@v1
       if: github.event_name == 'push'
       with:
-        webhook: ${{ secrets.DISCORD_WEBHOOK }}
+        webhook: ${{ secrets.DISCORD_NOTIFICATIONS_WEBHOOK }}
         title: New binaries of NWNX:EE have been built.
         description: |
-          Click [here](https://github.com/plenarius/unified/releases/tag/latest) to download.
+          Click [here](${{ github.repository }}/releases/tag/latest) to download.
 
   docker:
     runs-on: ubuntu-20.04
@@ -198,9 +198,9 @@ jobs:
           file: ./Dockerfile-gha
           push: true
           tags: |
-            plenarius/unified:latest
-            plenarius/unified:${{ steps.vars.outputs.sha_short }}
-            ghcr.io/plenarius/nwnxee:latest
+            ${{ github.repository }}:latest
+            ${{ github.repository }}:${{ steps.vars.outputs.sha_short }}
+            ghcr.io/${{ github.repository_owner }}/nwnxee:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
@@ -208,11 +208,11 @@ jobs:
       - name: Notify Discord of New Docker Images
         uses: sarisia/actions-status-discord@v1
         with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          webhook: ${{ secrets.DISCORD_DOCKER_WEBHOOK }}
           title: A new docker image with the latest binaries has been published to the Docker Hub and GitHub Container Registry.
           description: |
-            * [Docker Hub](https://hub.docker.com/layers/plenarius/unified/${{ steps.vars.outputs.sha_short }}/images/${{ steps.docker_build.outputs.digest }})
-            * [GHCR](https://github.com/users/plenarius/packages/container/package/nwnxee)
+            * [Docker Hub](https://hub.docker.com/layers/${{ github.repository_owner }}/unified/${{ steps.vars.outputs.sha_short }}/images/${{ steps.docker_build.outputs.digest }})
+            * [GHCR](https://github.com/users/${{ github.repository_owner }}/packages/container/package/nwnxee)
 
 
   release:
