Doxygen now errors out on warnings, causing build failures

--- a/docgen/CMakeLists.txt
+++ b/docgen/CMakeLists.txt
@@ -18,6 +18,7 @@ if(DOXYGEN_FOUND)
     set(DOXYGEN_SORT_MEMBER_DOCS NO)
     set(DOXYGEN_QUIET YES)
     set(DOXYGEN_EXTRACT_ALL YES)
+    set(DOXYGEN_WARN_AS_ERROR YES)
     set(DOXYGEN_STRIP_FROM_PATH ${CMAKE_SOURCE_DIR}/)
     set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Documentation)
     set(DOXYGEN_ALIASES [[nwn{1}="<a href='https://nwnlexicon.com/index.php?title=\1' target='_blank'>\1</a>"]])
