--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -187,7 +187,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: nixie-service
           password: ${{ secrets.CR_PAT }}
 
       - name: Build and push
@@ -212,7 +212,7 @@ jobs:
           title: A new docker image with the latest binaries has been published to the Docker Hub and GitHub Container Registry.
           description: |
             * [Docker Hub](https://hub.docker.com/layers/${{ github.repository_owner }}/unified/${{ steps.vars.outputs.sha_short }}/images/${{ steps.docker_build.outputs.digest }})
-            * [GHCR](https://github.com/users/${{ github.repository_owner }}/packages/container/package/nwnxee)
+            * [GHCR](https://github.com/orgs/nwnxee/packages/container/package/nwnxee)
 
 
   release:
