--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,7 +178,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: nixie-service
+          username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.CR_PAT }}
 
       - name: Build and push
