--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -62,6 +62,7 @@ jobs:
       run: mv dark light/
 
     - name: Deploy Documents to Github Pages
+      if: github.event_name == 'push'
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
