--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,24 +1,8 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: master
-    paths:
-      - '**.cpp'
-      - '**.hpp'
-      - '**.inl'
-      - '**.h'
-      - '**.c'
-  pull_request:
-    branches: master
-    paths:
-      - '**.cpp'
-      - '**.hpp'
-      - '**.inl'
-      - '**.h'
-      - '**.c'
   schedule:
-    - cron: '31 8 * * 3'
+    - cron: '31 7 * * *'
 
 jobs:
   analyze:
