Don't need RESULT_VARIABLE too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 # -DSANITIZE_ADDRESS=On
 find_package(Sanitizers)
 
-execute_process(COMMAND git rev-parse --short HEAD OUTPUT_STRIP_TRAILING_WHITESPACE RESULT_VARIABLE SHORT_HASH_RESULT OUTPUT_VARIABLE SHORT_HASH)
+execute_process(COMMAND git rev-parse --short HEAD OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE SHORT_HASH)
 set(TARGET_NWN_BUILD 8193)
 set(TARGET_NWN_BUILD_REVISION 16)
 set(TARGET_NWN_BUILD_SHA ${SHORT_HASH})
