--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
       id: dependencies-cache
       with:
         path: "~/dependencies"
-        key: dependencies-6
+        key: dependencies-2020-11-16
 
     - name: Install Cache Additional Dependencies
       env:
@@ -48,9 +48,9 @@ jobs:
         if [[ "$CACHE_HIT" == 'true' ]]; then
           sudo cp --force --recursive ~/dependencies/* /
         else
-          sudo apt-get install libhunspell-dev libluajit-5.1-dev ccache libmariadbclient-dev-compat
+          sudo apt-get install libhunspell-dev libluajit-5.1-dev ccache libmariadb-dev-compat
           mkdir -p ~/dependencies
-          for dep in libhunspell-dev libluajit-5.1-dev ccache libmariadbclient-dev-compat; do
+          for dep in libhunspell-dev libluajit-5.1-dev ccache libmariadb-dev-compat libluajit-5.1-2 libluajit-5.1-common libmariadb-dev libmariadb-dev-compat libmariadb3; do
               dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies/
           done
         fi
