CI: The trivy input is dockerfile not name

--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -2,7 +2,7 @@ name: Container Security Analysis
 on:
   workflow_dispatch:
     inputs:
-      name:
+      dockerfile:
         description: 'Dockerfile'
         required: true
         default: 'Dockerfile'
