Tweaks: Add NWNX_TWEAKS_CLEAR_SPELL_EFFECTS_ON_TURDS which will remove any spell effects on logged out users when a caster rests

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -22,4 +22,5 @@ add_plugin(Tweaks
     "Tweaks/BlockDMSpawnItem.cpp"
     "Tweaks/FixArmorDexBonusUnderOne.cpp"
     "Tweaks/FixItemNullptrInCItemRepository.cpp"
+    "Tweaks/ClearSpellEffectsOnTURDs.cpp"
 )
