Experimental: Attempt to correct a crash involving faction/reputations

--- a/Plugins/Experimental/CMakeLists.txt
+++ b/Plugins/Experimental/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_plugin(Experimental
         "Experimental.cpp"
         "Experimentals/SuppressPlayerLoginInfo.cpp"
+        "Experimentals/AdjustReputationFix.cpp"
 )
