Experimental: add NWNX_EXPERIMENTAL_DISABLE_LEVELUP_VALIDATION

--- a/Plugins/Experimental/CMakeLists.txt
+++ b/Plugins/Experimental/CMakeLists.txt
@@ -2,4 +2,4 @@ add_plugin(Experimental
         "Experimental.cpp"
         "Experimentals/SuppressPlayerLoginInfo.cpp"
         "Experimentals/AdjustReputationFix.cpp"
-)
+        "Experimentals/DisableLevelUpValidation.cpp")
