--- a/Plugins/Experimental/CMakeLists.txt
+++ b/Plugins/Experimental/CMakeLists.txt
@@ -2,4 +2,5 @@ add_plugin(Experimental
         "Experimental.cpp"
         "Experimentals/SuppressPlayerLoginInfo.cpp"
         "Experimentals/AdjustReputationFix.cpp"
-        "Experimentals/DisableLevelUpValidation.cpp")
+        "Experimentals/DisableLevelUpValidation.cpp"
+        "Experimentals/UnhardcodeRangerDualWield.cpp")
