nwnxlib: Unserviceify commands, make it global

--- a/NWNXLib/CMakeLists.txt
+++ b/NWNXLib/CMakeLists.txt
@@ -16,7 +16,15 @@ macro(nwnxlib_add)
     endif()
 endmacro()
 
-nwnxlib_add("Assert.cpp" "Log.cpp" "Serialize.cpp" "Utils.cpp" "Encoding.cpp" "Plugin.cpp")
+nwnxlib_add(
+    "Assert.cpp"
+    "Log.cpp"
+    "Serialize.cpp"
+    "Utils.cpp"
+    "Encoding.cpp"
+    "Plugin.cpp"
+    "Commands.cpp"
+)
 
 add_subdirectory(API)
 add_subdirectory(External)
