optimizations: faster gameobj->client lookups

--- a/Plugins/Optimizations/CMakeLists.txt
+++ b/Plugins/Optimizations/CMakeLists.txt
@@ -2,4 +2,5 @@ add_plugin(Optimizations
         "AsyncLogFlush.cpp"
         "GameObjectLookup.cpp"
         "LuoLookup.cpp"
+        "PlayerLookup.cpp"
 )
