Tweaks: add NWNX_TWEAKS_SEND_TLK_OVERRIDE_BEFORE_CHARGEN

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -22,6 +22,7 @@ add_plugin(Tweaks
     "PlayerDyingHitPointLimit.cpp"
     "PreserveActionsOnDMPossess.cpp"
     "PreserveDepletedItems.cpp"
+    "SendTlkOverrideBeforeChargen.cpp"
     "SneakAttackCritImmunity.cpp"
     "StringToIntBaseToAuto.cpp"
     "TURDByCDKey.cpp"
