Tweaks: add NWNX_TWEAKS_RETAIN_LOCAL_VARIABLES_ON_ITEM_SPLIT

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -22,6 +22,7 @@ add_plugin(Tweaks
     "PlayerDyingHitPointLimit.cpp"
     "PreserveActionsOnDMPossess.cpp"
     "PreserveDepletedItems.cpp"
+    "RetainLocalVariablesOnItemSplit.cpp"
     "SendTlkOverrideBeforeChargen.cpp"
     "SneakAttackCritImmunity.cpp"
     "StringToIntBaseToAuto.cpp"
