update: added dm_spawncreature to blockable console commands

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_plugin(Tweaks
     "AddPrestigeclassCasterLevels.cpp"
     "AlwaysReturnFullDEXStat.cpp"
-    "BlockDMSpawnItem.cpp"
+    "BlockDMConsoleCommands.cpp"
     "ClearSpellEffectsOnTURDs.cpp"
     "CompareVarsForMerge.cpp"
     "DeadCreatureFiresOnAreaExit.cpp"
