--- a/Plugins/SWIG/CMakeLists.txt
+++ b/Plugins/SWIG/CMakeLists.txt
@@ -21,7 +21,7 @@ function(add_swig_plugin target language interfaces)
       SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON
       POSITION_INDEPENDENT_CODE ON)
 
-    target_link_options(${target} PRIVATE "LINKER:--no-undefined")
+    target_link_options(${target} PRIVATE "LINKER:--no-undefined,--no-demangle")
 endfunction()
 
 if(SWIG_FOUND)
