Tweaks: add NWNX_TWEAKS_HIDE_HARDCODED_ITEM_VFX

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -15,6 +15,7 @@ add_plugin(Tweaks
     "FixItemNullptrInCItemRepository.cpp"
     "FixUnlimitedPotionsBug.cpp"
     "HideClassesOnCharList.cpp"
+    "HideHardcodedItemVFX.cpp"
     "HidePlayersOnCharList.cpp"
     "ItemChargesCost.cpp"
     "LanguageOverride.cpp"
