Tweaks: add NWNX_TWEAKS_FIX_DM_FACTION_BUG

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -11,6 +11,7 @@ add_plugin(Tweaks
     "DisplayNumAttacksOverrideInCharacterSheet.cpp"
     "FixArmorDexBonusUnderOne.cpp"
     "FixDispelEffectLevels.cpp"
+    "FixDMFactionBug.cpp"
     "FixGreaterSanctuaryBug.cpp"
     "FixItemNullptrInCItemRepository.cpp"
     "FixResmanMemleak.cpp"
