Tweaks: add NWNX_TWEAKS_CANUSEITEM_CHECK_ILR_FOR_HENCHMEN

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -2,6 +2,7 @@ add_plugin(Tweaks
     "AddPrestigeclassCasterLevels.cpp"
     "AlwaysReturnFullDEXStat.cpp"
     "BlockDMSpawnItem.cpp"
+    "CanUseItemCheckILRForHenchmen.cpp"
     "ClearSpellEffectsOnTURDs.cpp"
     "CompareVarsForMerge.cpp"
     "DeadCreatureFiresOnAreaExit.cpp"
