Tweaks: add NWNX_TWEAKS_FIX_DM_SELECTION_BOX

--- a/Plugins/Tweaks/CMakeLists.txt
+++ b/Plugins/Tweaks/CMakeLists.txt
@@ -13,6 +13,7 @@ add_plugin(Tweaks
     "FixArmorDexBonusUnderOne.cpp"
     "FixDispelEffectLevels.cpp"
     "FixDMFactionBug.cpp"
+    "FixDMSelectionBox.cpp"
     "FixGreaterSanctuaryBug.cpp"
     "FixItemNullptrInCItemRepository.cpp"
     "FixUnlimitedPotionsBug.cpp"
